[SITE] Disabling form while save
by [Handhara Akeon (Ísis)] in [2012-03-09 12:10:30 (-03:00)]

--- a/Presentation/Assets/css/Author/screen_Form.css
+++ b/Presentation/Assets/css/Author/screen_Form.css
@@ -73,3 +73,11 @@
 	background: #500 url("/Assets/images/boxes/red_background.jpg") !important;
 	color: #FFF !important;
 }
+
+
+
+form.disabled *
+{
+	filter: alpha(opacity=75);
+	opacity: 0.75;
+}
