[SITE] Fixing error of missing hidden for Episode/Season IDs
by [aripmav1896@gmail.com] in [2012-04-01 19:50:58 (-03:00)]

--- a/Presentation/Views/Season/Author/Scene.cshtml
+++ b/Presentation/Views/Season/Author/Scene.cshtml
@@ -17,6 +17,9 @@
             @Html.HiddenFor(m => m.Story.SceneList[s].ID);
         }
         
+        @Html.HiddenFor(m => m.Story.SceneList[Model.SceneCounter].Episode.Season.ID);
+        @Html.HiddenFor(m => m.Story.SceneList[Model.SceneCounter].Episode.ID);
+                                                         
         for (var p = 0; p < scene.ParagraphTypeList.Count; p++)
         {
             Model.ParagraphCounter = p;
