[SITE] View button on Author screen; Story name show up when mouse is over its number; Fix error on rendering legend;
by [aripmav1896@gmail.com] in [2012-04-06 16:43:32 (-03:00)]

--- a/Presentation/Views/Season/Season.cshtml
+++ b/Presentation/Views/Season/Season.cshtml
@@ -12,7 +12,7 @@
 @foreach (var episode in Model.EpisodeList)
 {
     <div class="seasonItemList">
-        <a href="@Url.Action("Episode", "Season", new { season = Model.Season, episode = episode })">
+        <a href="@Url.Action("Episode", "Season", new { seasonID = Model.Season, episodeID = episode })">
             <span class="epCode">@(episode):</span>
             <span class="epTitle">@episode.Title</span>
         </a>
