--- a/Presentation/Views/Shared/Partial/Legend.cshtml
+++ b/Presentation/Views/Shared/Partial/Legend.cshtml
@@ -1,5 +1,5 @@
-﻿<div id="legend" class="lightback" onclick="AnimateLegend()">
-    <div class="header darkback">
+﻿<div id="legend" class="darkback" onclick="AnimateLegend()">
+    <div class="header lightback">
         Legenda
     </div>
 
