--- a/Presentation/Assets/css/screen_Menu.css
+++ b/Presentation/Assets/css/screen_Menu.css
@@ -7,6 +7,11 @@
 	font-family: Verdana, Tahoma, Arial, "Helvetica Neue", Helvetica, Sans-Serif;
 }
 
+.menu .season
+{
+    margin: 0px 0px 20px 0px;
+}
+
 .menu .header
 {
 	padding: 2px;
@@ -22,7 +27,6 @@
 .menu .body 
 {
     padding: 5px;
-    margin: 0px 0px 20px 0px;
 }
 
 .menu .body .item
@@ -39,4 +43,25 @@
 {
     text-decoration: none;
     color: inherit;
+}
+
+
+.storyNameSuperBox
+{
+	display: table;
+	width: 100%;
+}
+
+.storyNameBox:empty
+{
+	visibility: hidden;
+}
+
+.storyNameBox
+{
+	height: 40px;
+	vertical-align: middle;
+	display: table-cell;
+	width: 100%;
+	padding: 5px;
 }
