--- a/Presentation/Views/Season/Author/Scene.cshtml
+++ b/Presentation/Views/Season/Author/Scene.cshtml
@@ -10,6 +10,13 @@
 }
 
 <div class="scene @if(scene.ID == Model.ReadingScene) { @("reading") }" id="Scene@(Model.SceneCounter)">
+    
+    <div class="goHistory">
+        @Html.RouteLink("View", "Scene",
+            new { seasonID = Model.Story.Season.ID, episodeID = Model.Story.ID, sceneID = scene.ID },
+            new { @class = "darkback", target = "_blank" })
+    </div>
+
     @using (Ajax.BeginForm("EditScene", route, ajaxOptions, html))
     {
         for (var s = 0; s <= Model.SceneCounter; s++)
