--- a/Presentation/Views/Shared/Partial/Js.cshtml
+++ b/Presentation/Views/Shared/Partial/Js.cshtml
@@ -17,6 +17,7 @@
 <script src="@Url.Content("~/Assets/js/AjustBoxes.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/Back.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/Legend.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/Menu.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/SceneChanger.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/FontResizer.js")" type="text/javascript"></script>
 
