--- a/Presentation/Views/Shared/Error.cshtml
+++ b/Presentation/Views/Shared/Error.cshtml
@@ -5,13 +5,20 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Ops!</h2>
+@if (Request.Url.DnsSafeHost == "localhost")
+{
+    @Model.Message
+}
+else
+{
+    <h2>Ops!</h2>
 
-<p>
-    Aconteceu um erro ao tentar acessar esta história.
-</p>
+    <p>
+        Aconteceu um erro ao tentar acessar esta história.
+    </p>
 
-<p>
-    Por favor, entre em contato:
-    <a href="mailto:caroline.s.duarte@gmail.com">caroline.s.duarte@gmail.com</a>
-</p>
+    <p>
+        Por favor, entre em contato:
+        <a href="mailto:caroline.s.duarte@gmail.com">caroline.s.duarte@gmail.com</a>
+    </p>
+}
