[SITE] Adding save button to story
by [aripmav1896@gmail.com] in [2012-05-13 04:53:50 (-03:00)]

--- a/Presentation/Views/Season/Author/Episode.cshtml
+++ b/Presentation/Views/Season/Author/Episode.cshtml
@@ -40,7 +40,7 @@
 @using (Ajax.BeginForm("EditTitle", route, ajaxOptions, html))
 {
     <div class="titleChange">
-        <button type="submit" class="darkback" class="save" id="save_title">Salvar</button>
+        <button type="submit" class="darkback" class="save" id="save_title">Save</button>
         @Html.TextBoxFor(m => m.Story.Title)<br />
 
         @Html.TextAreaFor(m => m.Story.Summary)
