[SITE] Changing intros
by [aripmav1896@gmail.com] in [2012-07-13 01:43:08 (-03:00)]

--- a/Presentation/Views/Season/Intro1.cshtml
+++ b/Presentation/Views/Season/Intro1.cshtml
@@ -9,7 +9,7 @@
 
 <p>
     Na fina flor da noite limpa se ocultam<br />
-    E findam um infeliz, alguém qualquer<br />
+    E drenam um infeliz qualquer<br />
     Depois vão-se e enterre quem vier<br />
     Não se preocupam com o que insultam<br />
 </p>
