--- a/Presentation/Views/Season/Intro2.cshtml
+++ b/Presentation/Views/Season/Intro2.cshtml
@@ -8,11 +8,11 @@
 <p class="title">Carta</p>
 
 <p>
-    O mundo nunca foi dos humanos. A tua vida é um pingo na eternidade de outros. Tua sorte é brincadeira para os que têm a tão sonhada juventude. O poder destes é inigualável. Desejaram isto, mas também suas conseqüências: as trevas, a morte, a incompreensão... A diferença que às vezes os superioriza e às vezes os coloca como o pior, o mais baixo e vil dos seres.
+    O mundo nunca foi dos humanos. A sua vida é um pingo na eternidade de outros. Sua sorte é brincadeira para os que têm a tão sonhada juventude. O poder deles é inigualável. Desejaram isto, mas também suas conseqüências: as trevas, a morte, a incompreensão. A diferença que às vezes os superioriza e às vezes os coloca como o pior, o mais baixo e vil dos seres.
 </p>
 
 <p>
-    Eles escolheram ter poder sobre a vida dos outros e perdê-lo sobre a sua. Eles escolheram se alimentar da vida alheia. Eles escolheram essa dependência. Eles escolheram sentir o gosto do que já sentiram dentro de seu corpo, o que faz dos outros seres fisicamente vivos. Eles escolheram a liberdade, e toda liberdade tem seu preço.
+    Eles escolheram ter poder sobre a vida dos outros e perdê-lo sobre a sua. Eles escolheram se alimentar da vida alheia, escolheram essa dependência. Eles escolheram sentir o gosto do que já sentiram dentro de seu corpo, o que faz dos outros seres fisicamente vivos. Eles escolheram a liberdade, e toda liberdade tem seu preço.
 </p>
 
 <p>
