[SITE] Changing layout, bleed
by [Handhara Akeon (Ísis)] in [2012-08-13 14:44:20 (-03:00)]

--- a/Presentation/Assets/css/Main.css
+++ b/Presentation/Assets/css/Main.css
@@ -4,12 +4,15 @@
 	width: auto;
 	height: auto;
 	font-size: 130%;
+	filter: alpha(opacity=75);
+	opacity: 0.75;
 }
 
 .main p.title
 {
 	text-align: center;
 	font-size: 125%;
+	color: #800;
 }
 
 .main p.title
