--- a/Presentation/Views/Shared/Partial/Legend.cshtml
+++ b/Presentation/Views/Shared/Partial/Legend.cshtml
@@ -1,5 +1,5 @@
 ﻿<div id="legend" class="darkback" onclick="AnimateLegend()">
-    <div class="header lightback">
+    <div class="header">
         Legenda
     </div>
 
