--- a/Presentation/Views/Shared/Partial/Menu.cshtml
+++ b/Presentation/Views/Shared/Partial/Menu.cshtml
@@ -21,7 +21,7 @@
 {
     <div class="season">
         <div class="darkback">
-            <div class="header lightback">
+            <div class="header">
                 @Html.RouteLink("Temporada " + season, route, new { action = "Index", controller = "Season", seasonID = season })
             </div>
 
