[SITE] Changing layout, final version
by [Handhara Akeon (Ísis)] in [2012-08-13 16:39:38 (-03:00)]

--- a/Presentation/Assets/css/screen_Main.css
+++ b/Presentation/Assets/css/screen_Main.css
@@ -2,8 +2,9 @@
 {
 	overflow-y: scroll;
 	padding: 25px;
-	margin: 0px 30px 20px 30px;
-	border: inset #000;
+	margin: 100px 50px 20px 50px;
+	border: 1px inset #999;
+	width: 800px;
 }
 
 .paragraph {
