--- a/Presentation/Assets/css/screen_Site.css
+++ b/Presentation/Assets/css/screen_Site.css
@@ -79,3 +79,19 @@ textarea
 {
     display: none;
 }
+
+
+
+
+.content
+{
+    width: 1126px;
+    margin: auto;
+}
+
+.left
+{
+    width: 240px;
+    float: left;
+    margin-top: -80px;
+}
