[SITE] Last ajusts in legend
by [aripmav1896@gmail.com] in [2012-08-26 22:53:24 (-03:00)]

--- a/Presentation/Assets/css/screen_Menu.css
+++ b/Presentation/Assets/css/screen_Menu.css
@@ -13,14 +13,23 @@
     margin: 0px 0px 20px 0px;
 }
 
-.menu .header
+.menu .header, .menu .legend-header
 {
 	padding: 2px;
-	border-radius: 0 0 10px 10px;
 	font-weight: bold;
 	font-size: 12px;
 	background: #511;
 	color: #CCC;
+}
+
+.menu .header
+{
+	border-radius: 0 0 10px 10px;
+}
+
+.menu .legend-header
+{
+	border-radius: 10px 10px 0 0;
 }
 
 .menu #save_status
@@ -45,11 +54,6 @@
 .menu .body .item.selected
 {
     color: #E55;
-}
-
-#legend
-{
-	cursor: pointer;
 }
 
 .menu a
