--- a/Presentation/Views/Shared/Partial/Legend.cshtml
+++ b/Presentation/Views/Shared/Partial/Legend.cshtml
@@ -1,9 +1,9 @@
-﻿<div id="legend" class="darkback" onclick="AnimateLegend()">
-    <div class="header">
+﻿<div id="legend" onclick="AnimateLegend()">
+    <div class="legend-header">
         Legenda
     </div>
 
-    <div class="body">
+    <div class="body lightback">
         <span class="talk_Arrive">Chegada</span><br />
         <span class="talk_Frizz">Frisado</span><br />
         <span class="talk_Out">Longe</span><br />
@@ -16,5 +16,9 @@
         <span class="talk_Ghost">Fantasma</span><br />
         <span class="talk_Mute">Gestos</span><br />
         <span class="talk_Irony">Ironia / Sarcasmo</span><br />
+    </div>
+
+    <div class="header">
+        - - - - - - -
     </div>
 </div>
