--- a/Presentation/Assets/css/Author/screen_LogOn.css
+++ b/Presentation/Assets/css/Author/screen_LogOn.css
@@ -1,8 +1,10 @@
 .login
 {
     position: absolute;
-    opacity: 0.85;
-    filter: alpha(opacity=85);
+    opacity: 0.9;
+    filter: alpha(opacity=90);
+    margin-top: -100px;
+    z-index: 1;
 }
 
 .login .inner
