[SITE] Put link to home on logo
by [Handhara Akeon (Ísis)] in [2012-08-30 18:21:50 (-03:00)]

--- a/Presentation/Views/Shared/_Layout.cshtml
+++ b/Presentation/Views/Shared/_Layout.cshtml
@@ -28,7 +28,9 @@
 
         <div class="left">
             <div class="head">
-                <img alt="MEAK" src="@Url.Content(@"~/Assets/images/logo.png")" />
+                <a href="/">
+                    <img alt="MEAK" src="@Url.Content(@"~/Assets/images/logo.png")" />
+                </a>
             </div>
 
             <div class="menu">
