--- a/Presentation/Views/Shared/_Layout.cshtml
+++ b/Presentation/Views/Shared/_Layout.cshtml
@@ -28,9 +28,6 @@
 
         <div class="left">
             <div class="head">
-                <a href="/">
-                    <img alt="MEAK" src="@Url.Content(@"~/Assets/images/logo.png")" />
-                </a>
             </div>
 
             <div class="menu">
@@ -38,7 +35,7 @@
             </div>
         </div>
 
-        <div class="main lightback hidden">
+        <div class="main lightback">
             @RenderBody()
         </div>
     </div>
