--- a/Presentation/Assets/css/screen_Main.css
+++ b/Presentation/Assets/css/screen_Main.css
@@ -1,10 +1,11 @@
 ﻿.main
 {
-	overflow-y: scroll;
 	padding: 25px;
-	margin: 100px 50px 20px 50px;
 	border: 1px inset #999;
 	width: 800px;
+	float: right;
+	margin: 8px;
+	min-height: 450px;
 }
 
 .paragraph {
