[SITE] Ajusts on Author part (about no more resizing)
by [Dara Keon (Ísis)] in [2013-01-17 18:03:24 (-02:00)]

--- a/Presentation/Assets/css/Author/screen_Form.css
+++ b/Presentation/Assets/css/Author/screen_Form.css
@@ -2,6 +2,7 @@
 .main textarea
 {
 	background: none;
+	width: 590px;
 }
 
 .main input,
@@ -62,6 +63,7 @@
 .main input.auxi
 {
 	width: 70px;
+	border: 1px solid #999;
 }
 
 
@@ -90,4 +92,11 @@ form.disabled *
 {
 	filter: alpha(opacity=75);
 	opacity: 0.75;
+}
+
+
+.suggestionCharacter input,
+.suggestionCharacter .suggestionBox
+{
+    margin-right: 4px;
 }
