[SITE] Put space between teller paragraphs; save without authorize don't give false positive answer
by [Dara Keon (Ísis)] in [2013-01-30 17:45:42 (-02:00)]

--- a/Presentation/Views/Season/Author/Scene.cshtml
+++ b/Presentation/Views/Season/Author/Scene.cshtml
@@ -4,7 +4,7 @@
     var scene = Model.Story.SceneList[Model.SceneCounter];
     var formId = "form_" + scene.ID;
 
-    var ajaxOptions = new AjaxOptions { HttpMethod = "Post", OnBegin = "SaveBegin('" + formId + "')", OnSuccess = "SaveSuccess('" + formId + "')", OnFailure = "SaveFailure('" + formId + "')" };
+    var ajaxOptions = new AjaxOptions { HttpMethod = "Post", OnBegin = "SaveBegin('" + formId + "')", OnSuccess = "SaveSuccess('" + formId + "', data)", OnFailure = "SaveFailure('" + formId + "')" };
     var route = new { sceneID = scene.ID, episodeID = Model.Story.ID, seasonID = Model.Story.Season.ID };
     var html = new { id = formId };
 }
