[SITE] Changed logic of new frame in scene
by [Dara Keon (Ísis)] in [2013-01-30 18:20:47 (-02:00)]

--- a/Presentation/Assets/css/Episode.css
+++ b/Presentation/Assets/css/Episode.css
@@ -51,6 +51,11 @@
 	font-weight: bold;
 }
 
+.teller_First {
+	font-weight: bold;
+	padding-top: 38px;
+}
+
 .teller_Letter {
 	font-style: italic;
 }
