[SITE] Added Resumo to summaries page of site
by [Dara Keon (Ísis)] in [2013-02-06 18:37:51 (-02:00)]

--- a/Presentation/Assets/css/Main.css
+++ b/Presentation/Assets/css/Main.css
@@ -20,6 +20,12 @@
 	text-transform: uppercase;
 }
 
+.main p.title .sub
+{
+    font-family: monospace;
+    font-weight: normal;
+}
+
 .main .sign
 {
 	text-align: right;
