--- a/Presentation/Views/Season/Season.cshtml
+++ b/Presentation/Views/Season/Season.cshtml
@@ -6,7 +6,7 @@
 }
 
 <p class="title">
-    Temporada @Model.Season
+    Temporada @Model.Season<br /><span class="sub">Resumo</span>
 </p>
 
 <ul class="seasonEpisodesList">
