[SITE] Fixed summaries, don't show of current story
by [Dara Keon (Ísis)] in [2013-07-26 16:53:03 (-03:00)]

--- a/Presentation/Assets/css/Season.css
+++ b/Presentation/Assets/css/Season.css
@@ -1,15 +1,15 @@
-.seasonEpisodesList
+.seasonEpisodeList
 {
 	margin: 0;
 	padding: 0;
 }
 
-.seasonEpisodesList li
+.seasonEpisodeList li
 {
 	list-style: none;
 }
 
-.seasonEpisodesList .title
+.seasonEpisodeList .title
 {
     text-decoration: none;
     color: inherit;
@@ -18,17 +18,17 @@
     font-size: 115%;
 }
 
-.seasonEpisodesList .epCode
+.seasonEpisodeList .epCode
 {
 	font-weight: bold;
 }
 
-.seasonEpisodesList .epTitle
+.seasonEpisodeList .epTitle
 {
 	font-style: italic;
 }
 
-.seasonEpisodesList .summary
+.seasonEpisodeList .summary
 {
     text-decoration: none;
     color: inherit;
