--- a/Presentation/Views/Season/Summary.cshtml
+++ b/Presentation/Views/Season/Summary.cshtml
@@ -9,7 +9,7 @@
     Temporada @Model.Season<br /><span class="sub">Resumo</span>
 </p>
 
-<ul class="seasonEpisodesList">
+<ul class="seasonEpisodeList">
     @foreach (var episode in Model.EpisodeList)
     {
         <li>
