[SITE] Put Continue on not ended stories;
by [Dara Keon (desktop)] in [2013-11-18 02:58:59 (-02:00)]

--- a/Presentation/Assets/css/Main.css
+++ b/Presentation/Assets/css/Main.css
@@ -43,3 +43,11 @@
 {
     margin-bottom: 100px;
 }
+
+.continue
+{
+    text-align: center;
+    margin: 50px 0;
+    font-variant:small-caps;
+    font-size: 150%;
+}
