--- a/Presentation/Assets/css/screen_Scene.css
+++ b/Presentation/Assets/css/screen_Scene.css
@@ -1,12 +1,17 @@
-.scenes .scene
+.scenes
 {
-    display: none;
+    margin-bottom: 50px;
 }
 
-.scenes .reading
-{
-    display: block;
-}
+    .scenes .scene
+    {
+        display: none;
+    }
+
+    .scenes .reading
+    {
+        display: block;
+    }
 
 
 .sceneChanger
