[SITE] Layout review
by [Dara Keon (desktop)] in [2013-12-17 07:18:20 (-02:00)]

--- a/Presentation/Views/Season/Episode.cshtml
+++ b/Presentation/Views/Season/Episode.cshtml
@@ -83,11 +83,6 @@
     }
 </div>
 
-
-
 @Html.Partial("Partial/ChangeScene", topSelector)
 
-
-<p class="sign">
-    <img alt="Handhara Akeon" src="@Url.Content(@"~/Assets/images/sign.gif")" />
-</p>
+@Html.Partial("Partial/Sign")
