--- a/Presentation/Views/Season/Author/Episode.cshtml
+++ b/Presentation/Views/Season/Author/Episode.cshtml
@@ -65,7 +65,4 @@
 
 @Html.Partial("Partial/ChangeScene", topSelector)
 
-
-<p class="sign">
-    <img alt="Handhara Akeon" src="@Url.Content(@"~/Assets/images/sign.gif")" />
-</p>
+@Html.Partial("Partial/Sign")
