--- a/Presentation/Views/Season/Summary.cshtml
+++ b/Presentation/Views/Season/Summary.cshtml
@@ -24,6 +24,4 @@
     }
 </ul>
 
-<p class="sign">
-    <img alt="Handhara Akeon" src="@Url.Content(@"~/Assets/images/sign.gif")" />
-</p>
+@Html.Partial("Partial/Sign")
