--- a/Presentation/Views/Shared/_Layout.cshtml
+++ b/Presentation/Views/Shared/_Layout.cshtml
@@ -12,7 +12,15 @@
         @Html.Partial("Partial/Css", Model.Css)
     }
 
-    @Html.Partial("Partial/Js")    
+    @Html.Partial("Partial/Js")
+
+    <meta property="og:title" content="@ViewBag.Title">
+    <meta property="og:description" content="Esta é a história de um amontoado de átomos ao acaso tentando voltar a ser.">
+    <meta property="og:image" content="@(Request.Url.Scheme + "://" + Request.Url.Authority)/Assets/images/site-name.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="222">
+    <meta property="og:image:height" content="85">
+
 </head>
 
 <body>
