[SITE] Making style change at the moment you change the box
by [Dara Keon (desktop)] in [2014-02-01 23:44:38 (-02:00)]

--- a/Presentation/Assets/css/Episode.css
+++ b/Presentation/Assets/css/Episode.css
@@ -56,6 +56,10 @@
 	padding-top: 38px;
 }
 
+    .teller_First input.text {
+	    padding-top: 38px;
+    }
+
 .teller_Letter {
 	font-style: italic;
 }
@@ -69,3 +73,6 @@
 	text-align: right;
 	text-transform: uppercase;
 }
+    .teller_Division input.text {
+	    padding-top: 38px;
+    }
