[SITE] Changed facebook image; fixed publish profile
by [Dara Keon (Ísis)] in [2015-04-24 17:13:08 (-03:00)]

--- a/Presentation/Views/Shared/_Layout.cshtml
+++ b/Presentation/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 
     <meta property="og:title" content="@ViewBag.Title">
     <meta property="og:description" content="Esta é a história de um amontoado de átomos ao acaso tentando voltar a ser.">
-    <meta property="og:image" content="@(Request.Url.Scheme + "://" + Request.Url.Authority)/Assets/images/site-name.png">
+    <meta property="og:image" content="@(Request.Url.Scheme + "://" + Request.Url.Authority)/Assets/images/facebook.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="222">
     <meta property="og:image:height" content="85">
