[SITE] Changed error e-mail
by [Dara Keon (pen drive)] in [2015-04-27 04:57:35 (-03:00)]

--- a/Presentation/Views/Shared/Error.cshtml
+++ b/Presentation/Views/Shared/Error.cshtml
@@ -19,6 +19,6 @@ else
 
     <p>
         Por favor, entre em contato:
-        <a href="mailto:caroline.s.duarte@gmail.com">caroline.s.duarte@gmail.com</a>
+        <a href="mailto:meak@darakeon.com">meak@darakeon.com</a>
     </p>
 }
