--- a/Presentation/Views/Season/Episode.cshtml
+++ b/Presentation/Views/Season/Episode.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Presentation.Models.SeasonEpisodeModel
+@using Presentation.Models.General
 @using Structure.Enums;
 
 @{
@@ -8,7 +9,7 @@
     Int32 tellerCounter = 0;
     
     var topSelector = 
-        new Presentation.Models.General.TopSelectorModel 
+        new TopSelectorModel 
             {
                 Total = Model.Story.SceneList.Count,
                 Current = Convert.ToInt32(Model.ReadingScene[0]) - 97
