[SITE] Link to upload summary
by [Dara Keon (desktop)] in [2015-04-28 07:09:22 (-03:00)]

--- a/Presentation/Assets/css/screen_Site.css
+++ b/Presentation/Assets/css/screen_Site.css
@@ -1,7 +1,11 @@
+*
+{
+    font-family: Calibri !important;
+}
+
 body
 {
     font-size: 75%;
-    font-family: Georgia, Garamond, "Times New Roman", "MS Serif", "New York", serif;
     color: #232323;
 }
 
