--- a/Presentation/Assets/css/Author/screen_Form.css
+++ b/Presentation/Assets/css/Author/screen_Form.css
@@ -36,12 +36,19 @@
 
 
 
-.main button
+.main .save
 {
     border: none;
     padding: 5px;
     font-size: 125%;
     font-weight: bold;
+    text-decoration: none;
+    height: 35px;
+}
+
+.main a.save
+{
+    padding: 6px 5px 4px 5px;
 }
 
 .main .scene button
